@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2021 the original author or authors.
+ * Copyright 2002-2020 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -49,7 +49,7 @@ import static org.assertj.core.api.Assertions.assertThatIllegalArgumentException
  * @author Jeremy Grelle
  */
 @SuppressWarnings({ "rawtypes", "unchecked" })
-class CheckboxTagTests extends AbstractFormTagTests {
+public class CheckboxTagTests extends AbstractFormTagTests {
 
 	private CheckboxTag tag;
 
@@ -68,7 +68,7 @@ class CheckboxTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	void withSingleValueBooleanObjectChecked() throws Exception {
+	public void withSingleValueBooleanObjectChecked() throws Exception {
 		this.tag.setPath("someBoolean");
 		int result = this.tag.doStartTag();
 		assertThat(result).isEqualTo(Tag.SKIP_BODY);
@@ -81,7 +81,7 @@ class CheckboxTagTests extends AbstractFormTagTests {
 		Document document = reader.read(new StringReader(output));
 		Element rootElement = document.getRootElement();
 		assertThat(rootElement.elements().size()).as("Both tag and hidden element not rendered").isEqualTo(2);
-		Element checkboxElement = rootElement.elements().get(0);
+		Element checkboxElement = (Element) rootElement.elements().get(0);
 		assertThat(checkboxElement.getName()).isEqualTo("input");
 		assertThat(checkboxElement.attribute("type").getValue()).isEqualTo("checkbox");
 		assertThat(checkboxElement.attribute("id").getValue()).isEqualTo("someBoolean1");
@@ -91,7 +91,7 @@ class CheckboxTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	void withIndexedBooleanObjectNotChecked() throws Exception {
+	public void withIndexedBooleanObjectNotChecked() throws Exception {
 		this.tag.setPath("someMap[key]");
 		int result = this.tag.doStartTag();
 		assertThat(result).isEqualTo(Tag.SKIP_BODY);
@@ -104,7 +104,7 @@ class CheckboxTagTests extends AbstractFormTagTests {
 		Document document = reader.read(new StringReader(output));
 		Element rootElement = document.getRootElement();
 		assertThat(rootElement.elements().size()).as("Both tag and hidden element not rendered").isEqualTo(2);
-		Element checkboxElement = rootElement.elements().get(0);
+		Element checkboxElement = (Element) rootElement.elements().get(0);
 		assertThat(checkboxElement.getName()).isEqualTo("input");
 		assertThat(checkboxElement.attribute("type").getValue()).isEqualTo("checkbox");
 		assertThat(checkboxElement.attribute("id").getValue()).isEqualTo("someMapkey1");
@@ -114,7 +114,7 @@ class CheckboxTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	void withSingleValueBooleanObjectCheckedAndDynamicAttributes() throws Exception {
+	public void withSingleValueBooleanObjectCheckedAndDynamicAttributes() throws Exception {
 		String dynamicAttribute1 = "attr1";
 		String dynamicAttribute2 = "attr2";
 
@@ -133,7 +133,7 @@ class CheckboxTagTests extends AbstractFormTagTests {
 		Document document = reader.read(new StringReader(output));
 		Element rootElement = document.getRootElement();
 		assertThat(rootElement.elements().size()).as("Both tag and hidden element not rendered").isEqualTo(2);
-		Element checkboxElement = rootElement.elements().get(0);
+		Element checkboxElement = (Element) rootElement.elements().get(0);
 		assertThat(checkboxElement.getName()).isEqualTo("input");
 		assertThat(checkboxElement.attribute("type").getValue()).isEqualTo("checkbox");
 		assertThat(checkboxElement.attribute("name").getValue()).isEqualTo("someBoolean");
@@ -144,7 +144,7 @@ class CheckboxTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	void withSingleValueBooleanChecked() throws Exception {
+	public void withSingleValueBooleanChecked() throws Exception {
 		this.tag.setPath("jedi");
 		int result = this.tag.doStartTag();
 		assertThat(result).isEqualTo(Tag.SKIP_BODY);
@@ -155,7 +155,7 @@ class CheckboxTagTests extends AbstractFormTagTests {
 
 		SAXReader reader = new SAXReader();
 		Document document = reader.read(new StringReader(output));
-		Element checkboxElement = document.getRootElement().elements().get(0);
+		Element checkboxElement = (Element) document.getRootElement().elements().get(0);
 		assertThat(checkboxElement.getName()).isEqualTo("input");
 		assertThat(checkboxElement.attribute("type").getValue()).isEqualTo("checkbox");
 		assertThat(checkboxElement.attribute("name").getValue()).isEqualTo("jedi");
@@ -164,7 +164,7 @@ class CheckboxTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	void withSingleValueBooleanObjectUnchecked() throws Exception {
+	public void withSingleValueBooleanObjectUnchecked() throws Exception {
 		this.bean.setSomeBoolean(Boolean.FALSE);
 		this.tag.setPath("someBoolean");
 		int result = this.tag.doStartTag();
@@ -177,7 +177,7 @@ class CheckboxTagTests extends AbstractFormTagTests {
 
 		SAXReader reader = new SAXReader();
 		Document document = reader.read(new StringReader(output));
-		Element checkboxElement = document.getRootElement().elements().get(0);
+		Element checkboxElement = (Element) document.getRootElement().elements().get(0);
 		assertThat(checkboxElement.getName()).isEqualTo("input");
 		assertThat(checkboxElement.attribute("type").getValue()).isEqualTo("checkbox");
 		assertThat(checkboxElement.attribute("name").getValue()).isEqualTo("someBoolean");
@@ -186,7 +186,7 @@ class CheckboxTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	void withSingleValueBooleanUnchecked() throws Exception {
+	public void withSingleValueBooleanUnchecked() throws Exception {
 		this.bean.setJedi(false);
 		this.tag.setPath("jedi");
 		int result = this.tag.doStartTag();
@@ -199,7 +199,7 @@ class CheckboxTagTests extends AbstractFormTagTests {
 
 		SAXReader reader = new SAXReader();
 		Document document = reader.read(new StringReader(output));
-		Element checkboxElement = document.getRootElement().elements().get(0);
+		Element checkboxElement = (Element) document.getRootElement().elements().get(0);
 		assertThat(checkboxElement.getName()).isEqualTo("input");
 		assertThat(checkboxElement.attribute("type").getValue()).isEqualTo("checkbox");
 		assertThat(checkboxElement.attribute("name").getValue()).isEqualTo("jedi");
@@ -208,7 +208,7 @@ class CheckboxTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	void withSingleValueNull() throws Exception {
+	public void withSingleValueNull() throws Exception {
 		this.bean.setName(null);
 		this.tag.setPath("name");
 		this.tag.setValue("Rob Harrop");
@@ -222,7 +222,7 @@ class CheckboxTagTests extends AbstractFormTagTests {
 
 		SAXReader reader = new SAXReader();
 		Document document = reader.read(new StringReader(output));
-		Element checkboxElement = document.getRootElement().elements().get(0);
+		Element checkboxElement = (Element) document.getRootElement().elements().get(0);
 		assertThat(checkboxElement.getName()).isEqualTo("input");
 		assertThat(checkboxElement.attribute("type").getValue()).isEqualTo("checkbox");
 		assertThat(checkboxElement.attribute("name").getValue()).isEqualTo("name");
@@ -231,7 +231,7 @@ class CheckboxTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	void withSingleValueNotNull() throws Exception {
+	public void withSingleValueNotNull() throws Exception {
 		this.bean.setName("Rob Harrop");
 		this.tag.setPath("name");
 		this.tag.setValue("Rob Harrop");
@@ -245,7 +245,7 @@ class CheckboxTagTests extends AbstractFormTagTests {
 
 		SAXReader reader = new SAXReader();
 		Document document = reader.read(new StringReader(output));
-		Element checkboxElement = document.getRootElement().elements().get(0);
+		Element checkboxElement = (Element) document.getRootElement().elements().get(0);
 		assertThat(checkboxElement.getName()).isEqualTo("input");
 		assertThat(checkboxElement.attribute("type").getValue()).isEqualTo("checkbox");
 		assertThat(checkboxElement.attribute("name").getValue()).isEqualTo("name");
@@ -254,7 +254,7 @@ class CheckboxTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	void withSingleValueAndEditor() throws Exception {
+	public void withSingleValueAndEditor() throws Exception {
 		this.bean.setName("Rob Harrop");
 		this.tag.setPath("name");
 		this.tag.setValue("   Rob Harrop");
@@ -272,7 +272,7 @@ class CheckboxTagTests extends AbstractFormTagTests {
 
 		SAXReader reader = new SAXReader();
 		Document document = reader.read(new StringReader(output));
-		Element checkboxElement = document.getRootElement().elements().get(0);
+		Element checkboxElement = (Element) document.getRootElement().elements().get(0);
 		assertThat(checkboxElement.getName()).isEqualTo("input");
 		assertThat(checkboxElement.attribute("type").getValue()).isEqualTo("checkbox");
 		assertThat(checkboxElement.attribute("name").getValue()).isEqualTo("name");
@@ -281,7 +281,7 @@ class CheckboxTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	void withMultiValueChecked() throws Exception {
+	public void withMultiValueChecked() throws Exception {
 		this.tag.setPath("stringArray");
 		this.tag.setValue("foo");
 		int result = this.tag.doStartTag();
@@ -294,7 +294,7 @@ class CheckboxTagTests extends AbstractFormTagTests {
 
 		SAXReader reader = new SAXReader();
 		Document document = reader.read(new StringReader(output));
-		Element checkboxElement = document.getRootElement().elements().get(0);
+		Element checkboxElement = (Element) document.getRootElement().elements().get(0);
 		assertThat(checkboxElement.getName()).isEqualTo("input");
 		assertThat(checkboxElement.attribute("type").getValue()).isEqualTo("checkbox");
 		assertThat(checkboxElement.attribute("name").getValue()).isEqualTo("stringArray");
@@ -303,7 +303,7 @@ class CheckboxTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	void withMultiValueUnchecked() throws Exception {
+	public void withMultiValueUnchecked() throws Exception {
 		this.tag.setPath("stringArray");
 		this.tag.setValue("abc");
 		int result = this.tag.doStartTag();
@@ -316,7 +316,7 @@ class CheckboxTagTests extends AbstractFormTagTests {
 
 		SAXReader reader = new SAXReader();
 		Document document = reader.read(new StringReader(output));
-		Element checkboxElement = document.getRootElement().elements().get(0);
+		Element checkboxElement = (Element) document.getRootElement().elements().get(0);
 		assertThat(checkboxElement.getName()).isEqualTo("input");
 		assertThat(checkboxElement.attribute("type").getValue()).isEqualTo("checkbox");
 		assertThat(checkboxElement.attribute("name").getValue()).isEqualTo("stringArray");
@@ -325,7 +325,7 @@ class CheckboxTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	void withMultiValueWithEditor() throws Exception {
+	public void withMultiValueWithEditor() throws Exception {
 		this.tag.setPath("stringArray");
 		this.tag.setValue("   foo");
 		BeanPropertyBindingResult bindingResult = new BeanPropertyBindingResult(this.bean, COMMAND_NAME);
@@ -344,7 +344,7 @@ class CheckboxTagTests extends AbstractFormTagTests {
 
 		SAXReader reader = new SAXReader();
 		Document document = reader.read(new StringReader(output));
-		Element checkboxElement = document.getRootElement().elements().get(0);
+		Element checkboxElement = (Element) document.getRootElement().elements().get(0);
 		assertThat(checkboxElement.getName()).isEqualTo("input");
 		assertThat(checkboxElement.attribute("type").getValue()).isEqualTo("checkbox");
 		assertThat(checkboxElement.attribute("name").getValue()).isEqualTo("stringArray");
@@ -353,7 +353,7 @@ class CheckboxTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	void withMultiValueIntegerWithEditor() throws Exception {
+	public void withMultiValueIntegerWithEditor() throws Exception {
 		this.tag.setPath("someIntegerArray");
 		this.tag.setValue("   1");
 		BeanPropertyBindingResult bindingResult = new BeanPropertyBindingResult(this.bean, COMMAND_NAME);
@@ -372,7 +372,7 @@ class CheckboxTagTests extends AbstractFormTagTests {
 
 		SAXReader reader = new SAXReader();
 		Document document = reader.read(new StringReader(output));
-		Element checkboxElement = document.getRootElement().elements().get(0);
+		Element checkboxElement = (Element) document.getRootElement().elements().get(0);
 		assertThat(checkboxElement.getName()).isEqualTo("input");
 		assertThat(checkboxElement.attribute("type").getValue()).isEqualTo("checkbox");
 		assertThat(checkboxElement.attribute("name").getValue()).isEqualTo("someIntegerArray");
@@ -381,7 +381,7 @@ class CheckboxTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	void withCollection() throws Exception {
+	public void withCollection() throws Exception {
 		this.tag.setPath("someList");
 		this.tag.setValue("foo");
 		int result = this.tag.doStartTag();
@@ -394,7 +394,7 @@ class CheckboxTagTests extends AbstractFormTagTests {
 
 		SAXReader reader = new SAXReader();
 		Document document = reader.read(new StringReader(output));
-		Element checkboxElement = document.getRootElement().elements().get(0);
+		Element checkboxElement = (Element) document.getRootElement().elements().get(0);
 		assertThat(checkboxElement.getName()).isEqualTo("input");
 		assertThat(checkboxElement.attribute("type").getValue()).isEqualTo("checkbox");
 		assertThat(checkboxElement.attribute("name").getValue()).isEqualTo("someList");
@@ -403,7 +403,7 @@ class CheckboxTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	void withObjectChecked() throws Exception {
+	public void withObjectChecked() throws Exception {
 		this.tag.setPath("date");
 		this.tag.setValue(getDate());
 
@@ -417,7 +417,7 @@ class CheckboxTagTests extends AbstractFormTagTests {
 
 		SAXReader reader = new SAXReader();
 		Document document = reader.read(new StringReader(output));
-		Element checkboxElement = document.getRootElement().elements().get(0);
+		Element checkboxElement = (Element) document.getRootElement().elements().get(0);
 		assertThat(checkboxElement.getName()).isEqualTo("input");
 		assertThat(checkboxElement.attribute("type").getValue()).isEqualTo("checkbox");
 		assertThat(checkboxElement.attribute("name").getValue()).isEqualTo("date");
@@ -426,7 +426,7 @@ class CheckboxTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	void withObjectUnchecked() throws Exception {
+	public void withObjectUnchecked() throws Exception {
 		this.tag.setPath("date");
 		Date date = new Date();
 		this.tag.setValue(date);
@@ -441,7 +441,7 @@ class CheckboxTagTests extends AbstractFormTagTests {
 
 		SAXReader reader = new SAXReader();
 		Document document = reader.read(new StringReader(output));
-		Element checkboxElement = document.getRootElement().elements().get(0);
+		Element checkboxElement = (Element) document.getRootElement().elements().get(0);
 		assertThat(checkboxElement.getName()).isEqualTo("input");
 		assertThat(checkboxElement.attribute("type").getValue()).isEqualTo("checkbox");
 		assertThat(checkboxElement.attribute("name").getValue()).isEqualTo("date");
@@ -450,7 +450,7 @@ class CheckboxTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	void collectionOfColoursSelected() throws Exception {
+	public void collectionOfColoursSelected() throws Exception {
 		this.tag.setPath("otherColours");
 		this.tag.setValue("RED");
 
@@ -464,7 +464,7 @@ class CheckboxTagTests extends AbstractFormTagTests {
 
 		SAXReader reader = new SAXReader();
 		Document document = reader.read(new StringReader(output));
-		Element checkboxElement = document.getRootElement().elements().get(0);
+		Element checkboxElement = (Element) document.getRootElement().elements().get(0);
 		assertThat(checkboxElement.getName()).isEqualTo("input");
 		assertThat(checkboxElement.attribute("type").getValue()).isEqualTo("checkbox");
 		assertThat(checkboxElement.attribute("name").getValue()).isEqualTo("otherColours");
@@ -472,7 +472,7 @@ class CheckboxTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	void collectionOfColoursNotSelected() throws Exception {
+	public void collectionOfColoursNotSelected() throws Exception {
 		this.tag.setPath("otherColours");
 		this.tag.setValue("PURPLE");
 
@@ -486,7 +486,7 @@ class CheckboxTagTests extends AbstractFormTagTests {
 
 		SAXReader reader = new SAXReader();
 		Document document = reader.read(new StringReader(output));
-		Element checkboxElement = document.getRootElement().elements().get(0);
+		Element checkboxElement = (Element) document.getRootElement().elements().get(0);
 		assertThat(checkboxElement.getName()).isEqualTo("input");
 		assertThat(checkboxElement.attribute("type").getValue()).isEqualTo("checkbox");
 		assertThat(checkboxElement.attribute("name").getValue()).isEqualTo("otherColours");
@@ -494,7 +494,7 @@ class CheckboxTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	void collectionOfPetsAsString() throws Exception {
+	public void collectionOfPetsAsString() throws Exception {
 		this.tag.setPath("pets");
 		this.tag.setValue("Spot");
 
@@ -508,7 +508,7 @@ class CheckboxTagTests extends AbstractFormTagTests {
 
 		SAXReader reader = new SAXReader();
 		Document document = reader.read(new StringReader(output));
-		Element checkboxElement = document.getRootElement().elements().get(0);
+		Element checkboxElement = (Element) document.getRootElement().elements().get(0);
 		assertThat(checkboxElement.getName()).isEqualTo("input");
 		assertThat(checkboxElement.attribute("type").getValue()).isEqualTo("checkbox");
 		assertThat(checkboxElement.attribute("name").getValue()).isEqualTo("pets");
@@ -516,7 +516,7 @@ class CheckboxTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	void collectionOfPetsAsStringNotSelected() throws Exception {
+	public void collectionOfPetsAsStringNotSelected() throws Exception {
 		this.tag.setPath("pets");
 		this.tag.setValue("Santa's Little Helper");
 
@@ -530,7 +530,7 @@ class CheckboxTagTests extends AbstractFormTagTests {
 
 		SAXReader reader = new SAXReader();
 		Document document = reader.read(new StringReader(output));
-		Element checkboxElement = document.getRootElement().elements().get(0);
+		Element checkboxElement = (Element) document.getRootElement().elements().get(0);
 		assertThat(checkboxElement.getName()).isEqualTo("input");
 		assertThat(checkboxElement.attribute("type").getValue()).isEqualTo("checkbox");
 		assertThat(checkboxElement.attribute("name").getValue()).isEqualTo("pets");
@@ -538,7 +538,7 @@ class CheckboxTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	void collectionOfPets() throws Exception {
+	public void collectionOfPets() throws Exception {
 		this.tag.setPath("pets");
 		this.tag.setValue(new Pet("Rudiger"));
 
@@ -552,7 +552,7 @@ class CheckboxTagTests extends AbstractFormTagTests {
 
 		SAXReader reader = new SAXReader();
 		Document document = reader.read(new StringReader(output));
-		Element checkboxElement = document.getRootElement().elements().get(0);
+		Element checkboxElement = (Element) document.getRootElement().elements().get(0);
 		assertThat(checkboxElement.getName()).isEqualTo("input");
 		assertThat(checkboxElement.attribute("type").getValue()).isEqualTo("checkbox");
 		assertThat(checkboxElement.attribute("name").getValue()).isEqualTo("pets");
@@ -561,7 +561,7 @@ class CheckboxTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	void collectionOfPetsNotSelected() throws Exception {
+	public void collectionOfPetsNotSelected() throws Exception {
 		this.tag.setPath("pets");
 		this.tag.setValue(new Pet("Santa's Little Helper"));
 
@@ -575,7 +575,7 @@ class CheckboxTagTests extends AbstractFormTagTests {
 
 		SAXReader reader = new SAXReader();
 		Document document = reader.read(new StringReader(output));
-		Element checkboxElement = document.getRootElement().elements().get(0);
+		Element checkboxElement = (Element) document.getRootElement().elements().get(0);
 		assertThat(checkboxElement.getName()).isEqualTo("input");
 		assertThat(checkboxElement.attribute("type").getValue()).isEqualTo("checkbox");
 		assertThat(checkboxElement.attribute("name").getValue()).isEqualTo("pets");
@@ -584,7 +584,7 @@ class CheckboxTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	void collectionOfPetsWithEditor() throws Exception {
+	public void collectionOfPetsWithEditor() throws Exception {
 		this.tag.setPath("pets");
 		this.tag.setValue(new ItemPet("Rudiger"));
 
@@ -603,7 +603,7 @@ class CheckboxTagTests extends AbstractFormTagTests {
 
 		SAXReader reader = new SAXReader();
 		Document document = reader.read(new StringReader(output));
-		Element checkboxElement = document.getRootElement().elements().get(0);
+		Element checkboxElement = (Element) document.getRootElement().elements().get(0);
 		assertThat(checkboxElement.getName()).isEqualTo("input");
 		assertThat(checkboxElement.attribute("type").getValue()).isEqualTo("checkbox");
 		assertThat(checkboxElement.attribute("name").getValue()).isEqualTo("pets");
@@ -612,14 +612,14 @@ class CheckboxTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	void withNullValue() throws Exception {
+	public void withNullValue() throws Exception {
 		this.tag.setPath("name");
 		assertThatIllegalArgumentException().as("null value binding to a non-boolean").isThrownBy(
 				this.tag::doStartTag);
 	}
 
 	@Test
-	void hiddenElementOmittedOnDisabled() throws Exception {
+	public void hiddenElementOmittedOnDisabled() throws Exception {
 		this.tag.setPath("someBoolean");
 		this.tag.setDisabled(true);
 		int result = this.tag.doStartTag();
@@ -633,7 +633,7 @@ class CheckboxTagTests extends AbstractFormTagTests {
 		Document document = reader.read(new StringReader(output));
 		Element rootElement = document.getRootElement();
 		assertThat(rootElement.elements().size()).as("Both tag and hidden element rendered incorrectly").isEqualTo(1);
-		Element checkboxElement = rootElement.elements().get(0);
+		Element checkboxElement = (Element) rootElement.elements().get(0);
 		assertThat(checkboxElement.getName()).isEqualTo("input");
 		assertThat(checkboxElement.attribute("type").getValue()).isEqualTo("checkbox");
 		assertThat(checkboxElement.attribute("name").getValue()).isEqualTo("someBoolean");
@@ -642,7 +642,7 @@ class CheckboxTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	void dynamicTypeAttribute() throws JspException {
+	public void dynamicTypeAttribute() throws JspException {
 		assertThatIllegalArgumentException().isThrownBy(() ->
 				this.tag.setDynamicAttribute(null, "type", "email"))
 			.withMessage("Attribute type=\"email\" is not allowed");
@@ -718,7 +718,7 @@ class CheckboxTagTests extends AbstractFormTagTests {
 		@Override
 		public void setAsText(String text) {
 			this.count++;
-			setValue(Integer.valueOf(text.trim()));
+			setValue(new Integer(text.trim()));
 		}
 	}
 
