@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2021 the original author or authors.
+ * Copyright 2002-2019 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -41,7 +41,7 @@ import static org.assertj.core.api.Assertions.assertThatIllegalArgumentException
  * @author Juergen Hoeller
  * @author Jeremy Grelle
  */
-class RadioButtonTagTests extends AbstractFormTagTests {
+public class RadioButtonTagTests extends AbstractFormTagTests {
 
 	private RadioButtonTag tag;
 
@@ -60,7 +60,7 @@ class RadioButtonTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	void withCheckedValue() throws Exception {
+	public void withCheckedValue() throws Exception {
 		String dynamicAttribute1 = "attr1";
 		String dynamicAttribute2 = "attr2";
 
@@ -84,7 +84,7 @@ class RadioButtonTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	void withCheckedValueAndDynamicAttributes() throws Exception {
+	public void withCheckedValueAndDynamicAttributes() throws Exception {
 		this.tag.setPath("sex");
 		this.tag.setValue("M");
 		int result = this.tag.doStartTag();
@@ -100,7 +100,7 @@ class RadioButtonTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	void withCheckedObjectValue() throws Exception {
+	public void withCheckedObjectValue() throws Exception {
 		this.tag.setPath("myFloat");
 		this.tag.setValue(getFloat());
 		int result = this.tag.doStartTag();
@@ -116,7 +116,7 @@ class RadioButtonTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	void withCheckedObjectValueAndEditor() throws Exception {
+	public void withCheckedObjectValueAndEditor() throws Exception {
 		this.tag.setPath("myFloat");
 		this.tag.setValue("F12.99");
 
@@ -133,13 +133,13 @@ class RadioButtonTagTests extends AbstractFormTagTests {
 		assertTagClosed(output);
 		assertContainsAttribute(output, "name", "myFloat");
 		assertContainsAttribute(output, "type", "radio");
-		assertContainsAttribute(output, "value", "F" + getFloat());
+		assertContainsAttribute(output, "value", "F" + getFloat().toString());
 		assertContainsAttribute(output, "checked", "checked");
 	}
 
 	@Test
-	void withUncheckedObjectValue() throws Exception {
-		Float value = Float.valueOf("99.45");
+	public void withUncheckedObjectValue() throws Exception {
+		Float value = new Float("99.45");
 		this.tag.setPath("myFloat");
 		this.tag.setValue(value);
 		int result = this.tag.doStartTag();
@@ -155,7 +155,7 @@ class RadioButtonTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	void withUncheckedValue() throws Exception {
+	public void withUncheckedValue() throws Exception {
 		this.tag.setPath("sex");
 		this.tag.setValue("F");
 		int result = this.tag.doStartTag();
@@ -171,7 +171,7 @@ class RadioButtonTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	void collectionOfPets() throws Exception {
+	public void collectionOfPets() throws Exception {
 		this.tag.setPath("pets");
 		this.tag.setValue(new Pet("Rudiger"));
 
@@ -185,7 +185,7 @@ class RadioButtonTagTests extends AbstractFormTagTests {
 
 		SAXReader reader = new SAXReader();
 		Document document = reader.read(new StringReader(output));
-		Element checkboxElement = document.getRootElement().elements().get(0);
+		Element checkboxElement = (Element) document.getRootElement().elements().get(0);
 		assertThat(checkboxElement.getName()).isEqualTo("input");
 		assertThat(checkboxElement.attribute("type").getValue()).isEqualTo("radio");
 		assertThat(checkboxElement.attribute("name").getValue()).isEqualTo("pets");
@@ -194,7 +194,7 @@ class RadioButtonTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	void collectionOfPetsNotSelected() throws Exception {
+	public void collectionOfPetsNotSelected() throws Exception {
 		this.tag.setPath("pets");
 		this.tag.setValue(new Pet("Santa's Little Helper"));
 
@@ -208,7 +208,7 @@ class RadioButtonTagTests extends AbstractFormTagTests {
 
 		SAXReader reader = new SAXReader();
 		Document document = reader.read(new StringReader(output));
-		Element checkboxElement = document.getRootElement().elements().get(0);
+		Element checkboxElement = (Element) document.getRootElement().elements().get(0);
 		assertThat(checkboxElement.getName()).isEqualTo("input");
 		assertThat(checkboxElement.attribute("type").getValue()).isEqualTo("radio");
 		assertThat(checkboxElement.attribute("name").getValue()).isEqualTo("pets");
@@ -217,7 +217,7 @@ class RadioButtonTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	void collectionOfPetsWithEditor() throws Exception {
+	public void collectionOfPetsWithEditor() throws Exception {
 		this.tag.setPath("pets");
 		this.tag.setValue(new ItemPet("Rudiger"));
 
@@ -236,7 +236,7 @@ class RadioButtonTagTests extends AbstractFormTagTests {
 
 		SAXReader reader = new SAXReader();
 		Document document = reader.read(new StringReader(output));
-		Element checkboxElement = document.getRootElement().elements().get(0);
+		Element checkboxElement = (Element) document.getRootElement().elements().get(0);
 		assertThat(checkboxElement.getName()).isEqualTo("input");
 		assertThat(checkboxElement.attribute("type").getValue()).isEqualTo("radio");
 		assertThat(checkboxElement.attribute("name").getValue()).isEqualTo("pets");
@@ -245,7 +245,7 @@ class RadioButtonTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	void dynamicTypeAttribute() throws JspException {
+	public void dynamicTypeAttribute() throws JspException {
 		assertThatIllegalArgumentException().isThrownBy(() ->
 				this.tag.setDynamicAttribute(null, "type", "email"))
 			.withMessage("Attribute type=\"email\" is not allowed");
@@ -260,7 +260,7 @@ class RadioButtonTagTests extends AbstractFormTagTests {
 	}
 
 	private Float getFloat() {
-		return Float.valueOf("12.99");
+		return new Float("12.99");
 	}
 
 	@Override
